update spring boot to 3.5.7 and update deps