@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.3</version>
+        <version>3.5.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ru.investbook</groupId>
@@ -65,8 +65,9 @@
         <app.version>25.3</app.version>
         <java.version>25</java.version>  <!-- update lombok when java is updated -->
         <lombok.version>1.18.42</lombok.version>
-        <checkerframework.version>3.49.5</checkerframework.version>
-        <jpackage.version>1.6.6</jpackage.version>
+        <checkerframework.version>3.51.1</checkerframework.version>
+        <jpackage.version>1.7.1</jpackage.version>
+        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
         <checkerframework.skipDefs>-AskipDefs=.*</checkerframework.skipDefs>  <!-- overridden by 'nullcheck' profile -->
         <extension.loader.path>./extensions</extension.loader.path>  <!-- overridden by installer-* profiles -->
     </properties>
@@ -173,12 +174,12 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.8</version>
+            <version>2.8.13</version>
         </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.decampo</groupId>
@@ -188,7 +189,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.20.1</version>
+            <version>1.21.2</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -226,7 +227,7 @@
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>4.0.4</version>
+            <version>4.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -236,7 +237,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.5.3</version> <!-- JUnit 5 requirement -->
+                    <version>3.5.4</version> <!-- JUnit 5 requirement -->
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -244,6 +245,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.1</version>
                 <configuration>
                     <fork>true</fork> <!-- Must fork or else JVM arguments are ignored -->
                     <showDeprecation>true</showDeprecation>
@@ -287,6 +289,7 @@
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                         <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
@@ -336,7 +339,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.13</version>
+                <version>0.8.14</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -420,6 +423,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${maven-assembly-plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>zip</id>
@@ -442,6 +446,7 @@
         </profile>
         <profile>
             <id>installer-prepare</id>
+            <!-- Is required for installer-widows, installer-linux, installer-mac profiles -->
             <activation>
                 <property>
                     <name>!no-installer</name>
@@ -452,6 +457,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${maven-assembly-plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>copy installer files</id>
